fixed line height
caused texts to overlap each other

--- a/src/style.css
+++ b/src/style.css
@@ -57,10 +57,9 @@ font-size: 16px;
 
 .poem{
     font-size: 16px;
-    white-space: pre-wrap;
     background-color: white;
     padding:24px ;
-    line-height: 1.6px;
+    line-height: 1.6;
     border-left: 3px solid #89a3f8;
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.2);
 }
